# bw-hackathon

./: .gitignore  LICENSE  README.md
exercise-1-dataset-integration/: .env.example  .gitignore  README.md  pyproject.toml
exercise-1-dataset-integration/.claude/: settings.json
exercise-1-dataset-integration/tests/: test_output.py
exercise-2-autoresearch/: .env.example  .gitignore  CLAUDE.md  README.md  eval.py  pyproject.toml
exercise-2-autoresearch/.claude/: settings.json
exercise-2-autoresearch/.claude/commands/: iterate.md
exercise-2-autoresearch/scripts/: download_data.py
exercise-2-autoresearch/tasks/demand-1d-ahead/: program.md
exercise-2-autoresearch/tasks/demand-1d-ahead-test/: eval.py  program.md
exercise-2-autoresearch/tasks/demand-1d-ahead-test/data/: README.md
exercise-2-autoresearch/tasks/solar-1d-ahead/: eval.py  program.md
exercise-2-autoresearch/tasks/solar-1d-ahead/data/: README.md
exercise-2-autoresearch/tasks/wind-1d-ahead/: eval.py  program.md
exercise-2-autoresearch/tasks/wind-1d-ahead/data/: README.md
exercise-2-autoresearch/tasks/wind-2h-ahead/: eval.py  program.md
exercise-2-autoresearch/tasks/wind-2h-ahead/data/: README.md
