[project]
name = "bw-exercise-1-dataset-integration"
version = "0.1.0"
description = "BW Hackathon Exercise 1 — autonomous integration of an obscure-format public dataset."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
