[project]
name = "bw-hackathon"
version = "0.1.0"
description = "BW autoresearch forecasting hackathon"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.0",
    "polars>=1.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "httpx>=0.26",
    "python-dotenv>=1.0",
    "pyarrow>=24.0.0",
]

[tool.uv]
package = false
